--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-vdr (1.6.0-2) UNRELEASED; urgency=low
+vdr (1.6.0-2) unstable; urgency=low
 
   [ Tobias Grimm ]
   * Removed makedev dependency (not needed anymore since 1.4.7-2)
@@ -32,7 +32,11 @@ vdr (1.6.0-2) UNRELEASED; urgency=low
   * Upgraded opt-41-x_timer-info.dpatch to version 0.5
   * Improved caching in plugin-loader.sh
 
- -- Tobias Grimm <tg@e-tobi.net>  Sat, 12 Apr 2008 23:24:29 +0200
+  [ Thomas Schmidt ]
+  * Added Galician debconf translation (gl.po) from Jacobo Tarrio
+    (closes: #482132)
+
+ -- Thomas Schmidt <tschmidt@debian.org>  Wed, 21 May 2008 08:44:38 +0200
 
 vdr (1.6.0-1) experimental; urgency=low
 
