--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
-vdr (1.6.0-4) UNRELEASED; urgency=low
+vdr (1.6.0-4) unstable; urgency=high
 
+  [ Tobias Grimm ]
   * Made valgrind a Suggests and check in vdrleaktest, if valgrind exists
     (Closes: #489003)
 
- -- Tobias Grimm <tg@e-tobi.net>  Thu, 03 Jul 2008 01:00:38 +0200
+  [ Thomas Schmidt ]
+  * Set urgency to high, because it fixes an rc-bug
+
+ -- Thomas Schmidt <tschmidt@debian.org>  Thu, 03 Jul 2008 10:21:17 +0200
 
 vdr (1.6.0-3) unstable; urgency=low
 
