--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vdr (1.6.0-5) UNRELEASED; urgency=low
+
+  * Bumped Standards-Version to 3.8.0
+
+ -- Thomas Schmidt <tschmidt@debian.org>  Thu, 03 Jul 2008 10:47:29 +0200
+
 vdr (1.6.0-4) unstable; urgency=high
 
   [ Tobias Grimm ]
