--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,15 @@
 vdr (1.6.0-5) UNRELEASED; urgency=low
 
+  [ Thomas Schmidt ]
   * Bumped Standards-Version to 3.8.0
 
- -- Thomas Schmidt <tschmidt@debian.org>  Thu, 03 Jul 2008 10:47:29 +0200
+  [ Tobias Grimm ]
+  * Using "Provides: vdr-abi-1.6.0-debian" now, which plugin packages can depend
+    on. This way only plugins compiled for the specified ABI version can be
+    installed, allowing us to remove the runtime patch level test.
+    (Closes: #489914)
+
+ -- Tobias Grimm <tg@e-tobi.net>  Thu, 10 Jul 2008 03:08:07 +0200
 
 vdr (1.6.0-4) unstable; urgency=high
 
