--- a/debian/changelog
+++ b/debian/changelog
@@ -8,8 +8,10 @@ vdr (1.6.0-5) UNRELEASED; urgency=low
     on. This way only plugins compiled for the specified ABI version can be
     installed, allowing us to remove the runtime patch level test.
     (Closes: #489914)
+  * Setting VDR_LANG now takes care of /etc/default/locale if available,
+    otherwise uses /etc/environment or falls back to "C" (Closes: #490651)
 
- -- Tobias Grimm <tg@e-tobi.net>  Thu, 10 Jul 2008 03:08:07 +0200
+ -- Tobias Grimm <tg@e-tobi.net>  Mon, 14 Jul 2008 20:13:43 +0200
 
 vdr (1.6.0-4) unstable; urgency=high
 
