--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-vdr (1.6.0-5) UNRELEASED; urgency=low
+vdr (1.6.0-5) unstable; urgency=low
 
   [ Thomas Schmidt ]
   * Bumped Standards-Version to 3.8.0
@@ -11,7 +11,7 @@ vdr (1.6.0-5) UNRELEASED; urgency=low
   * Setting VDR_LANG now takes care of /etc/default/locale if available,
     otherwise uses /etc/environment or falls back to "C" (Closes: #490651)
 
- -- Tobias Grimm <tg@e-tobi.net>  Mon, 14 Jul 2008 20:13:43 +0200
+ -- Thomas Schmidt <tschmidt@debian.org>  Sat, 19 Jul 2008 16:25:21 +0200
 
 vdr (1.6.0-4) unstable; urgency=high
 
