--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vdr (1.6.0-6) UNRELEASED; urgency=low
+
+  * Fixed bashism in debian/rules (Closes: #491586)
+
+ -- Thomas Schmidt <tschmidt@debian.org>  Mon, 21 Jul 2008 11:39:42 +0200
+
 vdr (1.6.0-5) unstable; urgency=low
 
   [ Thomas Schmidt ]
