--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 vdr (1.6.0-6) UNRELEASED; urgency=low
 
+  [ Thomas Schmidt ]
   * Fixed bashism in debian/rules (Closes: #491586)
 
- -- Thomas Schmidt <tschmidt@debian.org>  Mon, 21 Jul 2008 11:39:42 +0200
+  [ Tobias Grimm ]
+  * Added 18_signalhandler-fix.dpatch
+
+ -- Tobias Grimm <tg@e-tobi.net>  Thu, 24 Jul 2008 00:46:15 +0200
 
 vdr (1.6.0-5) unstable; urgency=low
 
