--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,8 @@ vdr (1.6.0-9) UNRELEASED; urgency=low
 
   * Removed debconf note "VDR needs DVB kernel modules" - DVB modules should
     be part of the standard kernel (at least on i386 and amd64).
-  * Fixed debconf tonat ask to create /var/lib/video.00 if it already exists
+  * Fixed debconf to not ask to create /var/lib/video.00 if it already exists
+  * Added 19_dvb-api-v5.dpatch for new DVB API version 5 in kernel 2.6.28
 
  -- Tobias Grimm <etobi@debian.org>  Sat, 10 Jan 2009 23:10:46 +0100
 
