--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,14 @@
 vdr (1.6.0-9) UNRELEASED; urgency=low
 
+  [ Tobias Grimm ]
   * Removed debconf note "VDR needs DVB kernel modules" - DVB modules should
     be part of the standard kernel (at least on i386 and amd64).
   * Fixed debconf to not ask to create /var/lib/video.00 if it already exists
   * Added 19_dvb-api-v5.dpatch for new DVB API version 5 in kernel 2.6.28
+
+  [ Thomas Günther ]
+  * Added removal of vdr-dbg.1 to clean target in debian/rules
+  * Fixed substitution of 00list in debian/rules
 
  -- Tobias Grimm <etobi@debian.org>  Sat, 10 Jan 2009 23:10:46 +0100
 
