--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-vdr (1.6.0-13) UNRELEASED; urgency=low
+vdr (1.6.0-13) unstable; urgency=low
 
   * New upstream homepage http://www.tvdr.de/
   * Removed make-special-vdr.sh (Closes: #552638)
   * Added README.source
 
- -- Tobias Grimm <etobi@debian.org>  Sat, 17 Oct 2009 13:05:02 +0200
+ -- Tobias Grimm <etobi@debian.org>  Sun, 08 Nov 2009 22:14:13 +0100
 
 vdr (1.6.0-12) unstable; urgency=low
 
